Fixed fixed width on mobile

--- a/src/sdk/new-theme/ThemeModal.scss
+++ b/src/sdk/new-theme/ThemeModal.scss
@@ -19,5 +19,5 @@
 }
 
 .theme-change-modal-container {
-    width: 400px;
+    max-width: 400px;
 }
