--- a/src/sdk/translation/LanguageChangeModal/LanguageChangeModal.scss
+++ b/src/sdk/translation/LanguageChangeModal/LanguageChangeModal.scss
@@ -50,5 +50,5 @@ button.button-with-loading {
 }
 
 .language-change-modal-container {
-    width: 500px;
+    max-width: 500px;
 }
