--- a/src/sdk/uploadprofileimage/UploadProfileImage.scss
+++ b/src/sdk/uploadprofileimage/UploadProfileImage.scss
@@ -40,5 +40,5 @@ button.c4p--import-modal__import-button.cds--btn.cds--btn--sm.cds--btn--primary.
 }
 
 .uploadprofileimage-change-modal-container {
-    width: 500px;
+    max-width: 500px;
 }
